--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own website for free</a></section><section class="header3 cid-r9pBPk0gXJ mbr-parallax-background" id="header3-30">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="header3 cid-r9pBPk0gXJ mbr-parallax-background" id="header3-30">
 
     
 
@@ -71,7 +71,7 @@
                 <div class="mbr-section-text mbr-white pb-3 ">
                     <p class="mbr-text mbr-fonts-style display-5"><br>Desde La Educación Prohibida te invitamos a realizar este primer curso online donde conocerás de la diversidad de &nbsp;las educaciones alternativas desde una perspectiva  crítica, integral y transformadora.</p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="index.html#video3-19">SABER MÁS</a>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://desaprenderonline.com/curso/">SABER MÁS</a>
                     <a class="btn btn-md btn-white-outline display-4" href="https://docs.google.com/forms/d/e/1FAIpQLSfaeTKkwwZnXUkqUsKgdcREmisHoEV1wbj09XlkBrD97UrE_A/viewform?usp=sf_link" target="_blank">INSCRIBIRME</a></div>
             </div>
         </div>
@@ -180,7 +180,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Gracias!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="JqdsKfzg2hKNUvpimJiPvZ6/XPVEyS6fW2/2O1cUurIQGvOGVLAKHvVbZYKHvI3dNQCj1t9Lugi9+XnVi22vMhFa+yClc86JHRjdN0yF29KnCWnacMB4O3g7np1mI0Dk">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Mu8N8ImBFINaGxzMVx3f/ErTf+Y6W6XFsTU80ECNueGwVPIVPbUMXOkRxV9dStv4+4VtHuY/nJFB5IS2W8Hl0njUK9PnhKLghCCEA5F/oJdQvO5EmAk0MVDBzYzCxDjv">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
