--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header3 cid-r9pBPk0gXJ mbr-parallax-background" id="header3-30">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="header3 cid-r9pBPk0gXJ mbr-parallax-background" id="header3-30">
 
     
 
@@ -62,7 +62,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 120%;">
-                <img src="assets/images/image823-914x442.png" alt="Mobirise" title="">
+                <img src="assets/images/logoinclinado-25-931x450.png" alt="Mobirise" title="">
             </div>
 
             <div class="media-content">
@@ -72,7 +72,7 @@
                     <p class="mbr-text mbr-fonts-style display-5"><br>Desde La Educación Prohibida te invitamos a realizar este primer curso online donde conocerás de la diversidad de &nbsp;las educaciones alternativas desde una perspectiva  crítica, integral y transformadora.</p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://desaprenderonline.com/curso/">SABER MÁS</a>
-                    <a class="btn btn-md btn-white-outline display-4" href="https://docs.google.com/forms/d/e/1FAIpQLSfaeTKkwwZnXUkqUsKgdcREmisHoEV1wbj09XlkBrD97UrE_A/viewform?usp=sf_link" target="_blank">INSCRIBIRME</a></div>
+                    <a class="btn btn-md btn-secondary display-4" href="https://desaprenderonline.com/curso/index.html#pricing-tables1-1i" target="_blank">HOY 25% OFF</a></div>
             </div>
         </div>
     </div>
@@ -112,8 +112,8 @@
                         <p class="mbr-text mbr-fonts-style display-7">
                             El primer curso virtual en video sobre educación alternativa, realizado por el creador de La Educación Prohibida, con una perspectiva integral, crítica y transformadora.&nbsp;</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="http://desaprenderonline.com/curso/" class="btn btn-primary display-4">
-                            MAS INFORMACIÓN</a></div>
+                    <div class="mbr-section-btn text-center"><a href="http://desaprenderonline.com/curso/" class="btn btn-secondary display-4">
+                            25% OFF POR DICIEMBRE</a></div>
                 </div>
             </div>
 
@@ -179,7 +179,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Gracias!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="O49//z81xO6JmDLVYKK0uWXLoteUZ3u+J/tWxI/KEUngqWWpeyAt3afyCs693XLbCHD4mLBVcCLrOnqE5IoOnhzTgQ34fUsxyND4eG8XSKZi6+E9P7nq7aFavnj2zhJ+">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3svAfrAjYbZFIGFuiNP6cyaP+ywKedqxPWyLweXmVDB8THIvtggVWBZrFTyjKP8+MzCz0jYQ6pqVf7QrT+LXsXddmn67xr8H6n5R21p/5/6eoxbIELeywNTbK3A1ebzm">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
