--- a/desaprender.html
+++ b/desaprender.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site</a></section><section class="header3 cid-r7qnNRUAeB mbr-parallax-background" id="header3-1o">
+<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="header3 cid-r7qnNRUAeB mbr-parallax-background" id="header3-1o">
 
     
 
@@ -178,15 +178,15 @@
                         Agenda</h2>
                 </div>
                 <div class="clearfix"></div>
-                <div id="bootstrap-accordion_22" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
+                <div id="bootstrap-accordion_34" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
                     <div class="card">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-core="" href="#collapse1_22" aria-expanded="false" aria-controls="collapse1">
+                            <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-core="" href="#collapse1_34" aria-expanded="false" aria-controls="collapse1">
                                 <h4 class="mbr-fonts-style display-5">
                                     <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>&nbsp;Viernes: ¿Quién soy?</h4>
                             </a>
                         </div>
-                        <div id="collapse1_22" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_22">
+                        <div id="collapse1_34" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_34">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">17:00 Hs
 <br>Llegada: Dinámica de presentación, desde el juego. 
@@ -199,14 +199,14 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingTwo">
-                            <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_22" aria-expanded="false" aria-controls="collapse2">
+                            <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_34" aria-expanded="false" aria-controls="collapse2">
                                 <h4 class="mbr-fonts-style display-5">
                                     <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>&nbsp;Sábado: ¿Qué hicieron conmigo?
 <div><br></div></h4>
                             </a>
                             
                         </div>
-                        <div id="collapse2_22" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_22">
+                        <div id="collapse2_34" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_34">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">8:30 Hs 
 <br>Desayuno
@@ -233,13 +233,13 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingThree">
-                            <a role="button" class="collapsed text-black panel-title" data-toggle="collapse" data-core="" href="#collapse3_22" aria-expanded="false" aria-controls="collapse3">
+                            <a role="button" class="collapsed text-black panel-title" data-toggle="collapse" data-core="" href="#collapse3_34" aria-expanded="false" aria-controls="collapse3">
                                 <h4 class="mbr-fonts-style display-5">
                                     <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>&nbsp;Domingo: ¿Qué hago yo con lxs demás?
 </h4>
                             </a>
                         </div>
-                        <div id="collapse3_22" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_22">
+                        <div id="collapse3_34" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_34">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">8:30 Hs 
 <br>Meditación Activa
