--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
                         <img src="assets/images/grupo-1-676x332.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7"><strong>Claves para un aprendizaje integral</strong><br>14 de Abril en Bariloche</h4>
+                        <h4 class="card-title mbr-fonts-style display-7"><strong>Claves para un aprendizaje integral</strong><br><br></h4>
                         <p class="mbr-text mbr-fonts-style display-7">Un curso intensivo que nos invita recorrer la diversidad de experiencias educativas alternativas, conociendo sus diferencias, matices, elementos comunes y contradicciones.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="bariloche.html" class="btn btn-primary display-4">
-                            MÁS INFORMACIÓN</a></div>
+                    <div class="mbr-section-btn text-center"><a href="index.html" class="btn btn-primary-outline display-4">
+                            PROXIMAMENTE</a></div>
                 </div>
             </div>
 
