--- a/desaprender-inscripcion.html
+++ b/desaprender-inscripcion.html
@@ -45,14 +45,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="index.html">Actividades</a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#form1-z">
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">Videos</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#form1-z">
                         Contacto</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site maker</a></section><section class="header3 cid-r7TvRGX9xJ mbr-parallax-background" id="header3-2s">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="header3 cid-r7TvRGX9xJ mbr-parallax-background" id="header3-2s">
 
     
 
