--- a/quienes.html
+++ b/quienes.html
@@ -45,14 +45,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="index.html">Actividades</a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#form1-z">
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">Videos</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#form1-z">
                         Contacto</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content4 cid-r7qFN8rQj1" id="content4-2p">
+<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-section content4 cid-r7qFN8rQj1" id="content4-2p">
 
     
 
